Added scraper error handling Added link icon for CP Tidied up some error handling in LinkPreviewServiceImpl